--- a/app/views/line_items/_form.html.erb
+++ b/app/views/line_items/_form.html.erb
@@ -11,10 +11,14 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :product_id %><br />
-    <%= f.number_field :product_id %>
-  </div>
+    <div class="field">
+      <%= f.label :route_id %><br />
+      <%= f.number_field :route_id %>
+    </div>
+<!--  <div class="field">
+    <%#= f.label :product_id %><br />
+    <%#= f.number_field :product_id %>
+  </div>-->
   <div class="field">
     <%= f.label :cart_id %><br />
     <%= f.number_field :cart_id %>
