--- a/app/views/line_items/show.html.erb
+++ b/app/views/line_items/show.html.erb
@@ -1,9 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Product:</b>
-  <%= @line_item.product_id %>
+  <b>Route:</b>
+  <%= @line_item.route_id %>
 </p>
+
+<!--<b>Product:</b>
+<%#= @line_item.product_id %>-->
 
 <p>
   <b>Cart:</b>
