--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -15,7 +15,8 @@
     <!--  <th>stop no</th>  --->
     <th>Journey time</th>
     <th>Zone</th>
-    <th></th>
+    <th>No. of Tickets</th>
+
 
   </tr>
   <% @route.route_details.each do |d| %>       <!-- dan -->
