--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -21,7 +21,7 @@
       <h4>Inbound route:  <%= route.inbound_code%> From: <%= route.finish%> To: <%= route.start%></h4>
       <p>9 stops on this route, 3 stops per zone, ticket prices are based on the number of zones travelled. </p>
 
-      <%= link_to 'Buy your tickets here', products_path %>
+      <%= link_to 'Buy your tickets here', route %>        <!-- jjjj  -->
 
     </div>
 
