--- a/app/views/line_items/index.html.erb
+++ b/app/views/line_items/index.html.erb
@@ -11,7 +11,8 @@
 
 <% @line_items.each do |line_item| %>
   <tr>
-    <td><%= line_item.product_id %></td>
+    <td><%= line_item.route_id %></td>
+    <!--<td><%#= line_item.product_id %></td>-->
     <td><%= line_item.cart_id %></td>
     <td><%= link_to 'Show', line_item %></td>
     <td><%= link_to 'Edit', edit_line_item_path(line_item) %></td>
