--- a/app/views/routes/index.html.erb
+++ b/app/views/routes/index.html.erb
@@ -19,7 +19,7 @@
     <td><%= route.return_route %></td>
     <td><%= route.start %></td>
     <td><%= route.finish %></td>
-    <td><%= link_to 'Show', route %></td>
+    <td><%= link_to 'Details & Purchase', route %></td>
     <% if current_user and current_user.admin %>
   <td><%= link_to 'Edit', edit_route_path(route) %></td>
     <td><%= link_to 'Destroy', route, method: :delete, data: { confirm: 'Are you sure?' } %></td>
