--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -1,4 +1,8 @@
-<p>
+<h1>Online price which includes all stops is €15</h1>
+<h3>You can also hop on and pay the driver. Onboard prices are listed Here: </h3>
+<!--####FIX LINK TO INDEX NOT SHOW###-->
+
+  <p>
   <b>From: <%= @route.start %></b>
 
   <b>To: <%= @route.finish %></b>
