--- a/app/views/thanks/index.html.erb
+++ b/app/views/thanks/index.html.erb
@@ -1,2 +1,2 @@
 <h1>Thank you for placing your order!</h1>
-<%= link_to 'Buy more tickets here', products_path %>
+<%= link_to 'Buy more tickets here', store_path %>
