--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,10 +51,10 @@
         <ul id="adminlinks">
           <% if session[:user_id] %>
           <li><%= link_to 'Orders',   orders_path   %></li>
-          <li><%= link_to 'Products', products_path %></li>
+          <!--<li><%#= link_to 'Products', products_path %></li>-->
           <li><%= link_to 'Users',    users_path    %></li>
-          <li><%= link_to 'Routes',    routes_path    %></li>
-          <li><%= link_to 'Tickets',    tickets_path    %></li>
+          <!--<li><%#= link_to 'Routes',    routes_path    %></li>-->
+          <!--<li><%#= link_to 'Tickets',    tickets_path    %></li>-->
         </ul>
         <%#= button_to 'Logout', logout_path, method: :delete   %>
     <% end %>
