--- a/app/views/store/search_results.html.erb
+++ b/app/views/store/search_results.html.erb
@@ -31,7 +31,7 @@
 
 
     </table>
-    <h4>We stop at your destination, buy your ticket here:<%= link_to 'Routes', routes_path %></h4>
+    <h4>We stop at your destination, select your route here:<%= link_to 'Routes', routes_path %></h4>
 
 <% else %>
 
