--- a/app/views/ticket_prices/index.html.erb
+++ b/app/views/ticket_prices/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Listing ticket_prices</h1>
+<h1>Online price which includes all stops is €15</h1>
+<h3>You can also hop on and pay the driver. Onboard prices are listed here: </h3>
 
 <table>
   <tr>
